plugins {
	id 'fabric-loom' version '1.6-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven {
		name = 'Ladysnake Mods'
		url = 'https://maven.ladysnake.org/releases'
		content {
			includeGroup 'io.github.ladysnake'
			includeGroup 'org.ladysnake'
			includeGroupByRegex 'dev\\.onyxstudios.*'
		}
	}
	maven { url 'https://jitpack.io' }
}

loom {
    splitEnvironmentSourceSets()

	mods {
		"modid" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

configurations {
	library
	implementation.extendsFrom(library)
}

dependencies {
	minecraft ("com.mojang:minecraft:${project.minecraft_version}")
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	include modImplementation('com.github.0x3C50:Renderer:d687aced4')

	library("org.lwjgl:lwjgl-nanovg:3.3.1")

	//idiot XD
	library("org.lwjgl:lwjgl-nanovg:3.3.1:natives-windows")
	library("org.lwjgl:lwjgl-nanovg:3.3.1:natives-macos")
	library("org.lwjgl:lwjgl-nanovg:3.3.1:natives-linux")
	library("org.lwjgl:lwjgl-nanovg:3.3.1:natives-macos-arm64")
	library("org.lwjgl:lwjgl-nanovg:3.3.1:natives-linux-arm64")
	library("org.lwjgl:lwjgl-nanovg:3.3.1:natives-linux-arm32")

	library("se.michaelthelin.spotify:spotify-web-api-java:8.4.1") {
		exclude group: "com.google.code.gson", module: "gson"
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}

	duplicatesStrategy = DuplicatesStrategy.WARN
	from {
		configurations.library.collect { it.isDirectory() ? it : zipTree(it) }
	} {
		exclude "META-INF/LICENSE",
				"META-INF/NOTICE",
				"META-INF/DEPENDENCIES",
				"**/module-info.class",
				"META-INF/INDEX.LIST",
				"**/**.git", "**/**.sha1"
	}
}